style.css
/*
 * INSIDE CANVAS
 */
.phrase{
	border: none;
	padding: 0px !important;
	margin: 0px !important;
	margin-right: 0.3em !important;
	border-radius: 0px;
	line-height: 100%;
	display: inline-block;
	white-space: pre !important;
	word-break: normal !important;
	word-wrap: normal !important;
}
.mute{ color:lightgrey; } 
.alts{ color:#5bc0de; }
.alts a{ text-decoration:underline; color:inherit; }
.join span.string{ margin-left: -4px !important; } 
h2{ margin-top:0px; }
/*
 * PAGEWIDE
 */
.sidebar{ float:right; padding:2px; background:white; }
.section-header{ font-size: small; color:lightgray; text-transform:small-caps; }
hr{ margin:0px; padding:0px; margin-bottom:5px; }
br{ margin:10px; padding:10px;}
#body{ margin-top:70px; }
/*
 * EDIT
 */
textarea{ font-family: monospace;}
#edit{ float:right;}
/*
 * SETTINGS
 */
#transpose{width:75px;}
button{ margin-bottom:4px; margin-top:4px;}
#switches .bootstrap-switch{ text-align: center; }
#switches .bootstrap-switch-label{ width:100px; }
.bootstrap-switch-id-settingsSwitch{ float:right; margin-top:8px;}

/*
 * ALTERNATES
 */
#alternatesModal .btn-link{ color: inherit; cursor: inherit; }

/*
 * NIGHT MODE
 */

/* body{ background-color: #263238; }
 * textarea{ background-color: #37474f !important; }
 * *{ border-color: black !important; color: #607d8b !important; }
 * .bootstrap-switch-container span{ background-color: #455a64 !important; }
 * button{ background-color: #37474f !important; }
 * .bootstrap-switch-container span.bootstrap-switch-label{ background-color: #37474f !important; }
 * .modal-content{ background-color: #37474f; }
 */

